# complai-EU-crawler

./: README.md  pyproject.toml
regulatory_data_collection/: eur_lex_webservice.py  offenegesetze_api.py  pipelines.py
regulatory_data_collection/utils/: client.py  item.py  query.py  result.py
tests/: test_eur_lex_webservice.py
