[tool.poetry]
name = "complai-regulatory-data-collection"
version = "0.1.0"
description = ""
authors = ["Christoph Clement <christoph.clement@tum.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
pre-commit = "^2.2.0"
tqdm = "^4.45.0"
zeep = "^3.4.0"
xmltodict = "^0.12.0"
pymongo = "^3.10.1"
dnspython = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.poetry.scripts]
eur_lex_webservice = "regulatory_data_collection.eur_lex_webservice:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
